--- a/genesis_LITE/css/page.css
+++ b/genesis_LITE/css/page.css
@@ -1,4 +1,4 @@
-/* $Id: page.css,v 1.1.2.10 2009/05/07 18:24:10 jmburnz Exp $ */
+/* $Id: page.css,v 1.1.2.11 2009/05/08 09:36:13 jmburnz Exp $ */
 
 /**
  * @file page.css
@@ -176,10 +176,14 @@ body {}
 /**
  * To hide the skip-nav you can use:
  * height: 0; overflow: hidden;
-	* Do not use display: none as this hides it from screen readers.
+ * Do not use display: none as this hides it from screen readers.
  */
 #skip-nav {
-  text-align: center;
+  text-align: right;
+}
+#skip-nav a:focus {
+  border: 1px solid #FFCC00;
+		background: #FFFFCF;
 }
 #skip-nav a:link    {}
 #skip-nav a:hover   {}
