--- a/genesis_SUBTHEME/css/page.css
+++ b/genesis_SUBTHEME/css/page.css
@@ -1,4 +1,4 @@
-/* $Id: page.css,v 1.1.2.12 2009/05/07 18:24:10 jmburnz Exp $ */
+/* $Id: page.css,v 1.1.2.13 2009/05/08 09:36:13 jmburnz Exp $ */
 
 /**
  * @file page.css
@@ -187,7 +187,7 @@ body {}
  * Do not use display: none as this hides it from screen readers.
  */
 #skip-nav {
-  text-align: center;
+  text-align: right;
 }
 #skip-nav a:focus {
   border: 1px solid #FFCC00;
